<resources>
    <string name="app_name">VideoGamesInformation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_category">Category</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_detail">Detail</string>

    <string name="go_to_the_game_page">Go to the game page</string>
    <string name="search_games_by_name">Search games by name</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="no_games_were_found_with_the_search_term_please_try_another">No games were found with the search term, please try another</string>
    <string name="games_by_category">Games by category</string>
    <string name="mmorpg">mmorpg</string>
    <string name="game_information">Game Information</string>
    <string name="minimum_system_requirements">Minimum System Requirements</string>
    <string name="status">Status:</string>
    <string name="genre">Genre:</string>
    <string name="platform">Platform:</string>
    <string name="publisher">Publisher:</string>
    <string name="developer">Developer:</string>
    <string name="release_date">Release date:</string>
    <string name="os">Os:</string>
    <string name="processor">Processor:</string>
    <string name="memory">Memory:</string>
    <string name="graphics">Graphics:</string>
    <string name="storage">Storage:</string>
    <string name="screenshots">Screenshots</string>
    <string name="no_screenshots">No screenshots</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="game_removed_from_favorites">Game removed from favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="game_saved_in_favorites">Game saved in favorites</string>
    <string name="there_are_no_favorite_games_to_show">There are no favorite games to show</string>

    <string-array name="categories">
        <item>mmorpg</item>
        <item>shooter</item>
        <item>strategy</item>
        <item>moba</item>
        <item>racing</item>
        <item>sports</item>
        <item>social</item>
        <item>sandbox</item>
        <item>open-world</item>
        <item>survival</item>
        <item>pvp</item>
        <item>pve</item>
        <item>pixel</item>
        <item>voxel</item>
        <item>zombie</item>
        <item>turn-based</item>
        <item>first-person</item>
        <item>third-Person</item>
        <item>top-down</item>
        <item>tank</item>
        <item>space</item>
        <item>sailing</item>
        <item>side-scroller</item>
        <item>superhero</item>
        <item>permadeath</item>
        <item>card</item>
        <item>battle-royale</item>
        <item>mmo</item>
        <item>mmofps</item>
        <item>mmotps</item>
        <item>3d</item>
        <item>2d</item>
        <item>anime</item>
        <item>fantasy</item>
        <item>sci-fi</item>
        <item>fighting</item>
        <item>action-rpg</item>
        <item>action</item>
        <item>military</item>
        <item>martial-arts</item>
        <item>flight</item>
        <item>low-spec</item>
        <item>tower-defense</item>
        <item>horror</item>
        <item>mmorts</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>