<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_image"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/mButtonGoToTheGamePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/go_to_the_game_page"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <Button
                    android:id="@+id/mButtonFavorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/save_to_favorites"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </LinearLayout>

            <TextView
                android:id="@+id/mDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/colorPrimary"
                android:text="@string/game_information"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/mStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Status"/>

            <TextView
                android:id="@+id/mGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Genre"/>

            <TextView
                android:id="@+id/mPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Platform"/>

            <TextView
                android:id="@+id/mPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Publisher"/>

            <TextView
                android:id="@+id/mDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Developer"/>

            <TextView
                android:id="@+id/mRelease_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Release date"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/colorPrimary"
                android:text="@string/minimum_system_requirements"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/mOs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Os"/>

            <TextView
                android:id="@+id/mProcessor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Processor"/>

            <TextView
                android:id="@+id/mMemory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Memory"/>

            <TextView
                android:id="@+id/mGraphics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Graphics"/>

            <TextView
                android:id="@+id/mStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Storage"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/mScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/colorPrimary"
                android:text="@string/screenshots"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_screenshot"
                tools:itemCount="3"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/mTextViewNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:alpha="0.5"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/check_your_internet_connection"/>

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>